[project]
name = "mdfluence"
version = "0.2.1"
description = "Convert and upload Markdown documents to Confluence (fork of md2cf by Jack Gaino)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "geopanther", email = "geopanther@mail.de" },
]
keywords = ["markdown", "confluence"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich-argparse>=1.0.0,<2",
    "rich>=13.0,<16",
    "mistune>=3.0,<4",
    "chardet>=5.1.0,<8",
    "requests>=2.31.0,<3",
    "PyYAML>=6.0.1,<7",
    "gitignorefile>=1.1.2,<2",
]

[project.urls]
Homepage = "https://github.com/geopanther/mdfluence"
Repository = "https://github.com/geopanther/mdfluence"
Changelog = "https://github.com/geopanther/mdfluence/blob/main/CHANGELOG.md"

[project.scripts]
mdfluence = "mdfluence.__main__:main"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "identify>=2.6.19",
    "pre-commit",
    "ruff",
    "ty",
    "pytest>=8.0",
    "pytest-mock",
    "pyfakefs",
    "requests-mock",
    "tox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.tox]
envlist = ["py312", "py313"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [["pytest"]]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Flags not at the start of the expression:DeprecationWarning",
]
pythonpath = ["."]
testpaths = ["test_package"]
addopts = "-v --tb=short"
